bugfix contrast message

--- a/Javascriptmas 2024 (Scrimba)/Day 17/index.css
+++ b/Javascriptmas 2024 (Scrimba)/Day 17/index.css
@@ -141,5 +141,4 @@ button {
 .message {
     display: none;
     padding: 0 30px;
-    color: red;
 }
